fixed columns on small screens, title to nav, and added last updated date to index

--- a/qualitas/static/css/wiki.css
+++ b/qualitas/static/css/wiki.css
@@ -56,6 +56,7 @@ html, body {
 .icon-bar {
     width: 90px;
     background-color: #555;
+    position: fixed;
 }
 
 .icon-bar i {
@@ -65,6 +66,31 @@ html, body {
     transition: all 0.3s ease;
     color: white;
     font-size: 36px;
+}
+
+/* Desktop style after */
+@media (max-width: 600px) {
+    .icon-bar {
+        display: inline-block;
+        position: relative;
+        width: 204px;
+    }
+    .nav-edit {
+        float: left;
+        position: relative;
+        display: inline-block;
+    }
+    .nav-save {
+        float: left;
+        position: relative;
+        display: inline-block;
+    }
+
+    .nav-delete {
+        float: right;
+        position: relative;
+        display: inline-block;
+    }
 }
 
 .icon-bar i:hover {
